# Fnx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  environment.yml
notebooks/: plot.ipynb
src/: CMakeLists.txt  F_00.hpp  F_01.hpp  Fnx.cpp  Fnx.hip.cpp  Fnx.hip.hpp  Fnx.hpp  constants.hpp  oh_boys.cpp  pretabulated.hpp  print_utils.hpp  types.hpp  utils.hpp
src/tables/: F_00.hpp  F_01.hpp  F_02.hpp  F_03.hpp  F_04.hpp  F_05.hpp  F_06.hpp  F_07.hpp  F_08.hpp  F_09.hpp  F_10.hpp  F_11.hpp  F_12.hpp  F_13.hpp  F_14.hpp  F_15.hpp  F_16.hpp  F_17.hpp  F_18.hpp  F_19.hpp  F_20.hpp  F_21.hpp  F_22.hpp  F_23.hpp  F_24.hpp  F_25.hpp  F_26.hpp  F_27.hpp  F_28.hpp  generate.py
tests/: CMakeLists.txt  bf.cpp  bf_00.cpp  bf_01.cpp  main.cpp  reference.py  reference_large_args.cpp  reference_medium_args.cpp  reference_small_args.cpp  testing_utils.cpp  testing_utils.hpp
